workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_rename_path_component_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: new_events
---
[
    PathComponentRenamed(
        PathComponentRenamed {
            path_id: "path_1",
            name: "tasks",
            event_context: None,
        },
    ),
]
